# Copyright (c) 2017 The WebRTC project authors. All Rights Reserved.
#
# Use of this source code is governed by a BSD-style license
# that can be found in the LICENSE file in the root of the source
# tree. An additional intellectual property rights grant can be found
# in the file PATENTS.  All contributing project authors may
# be found in the AUTHORS file in the root of the source tree.

import("../webrtc.gni")

if (is_android) {
  import("//build/config/android/config.gni")
  import("//build/config/android/rules.gni")
}

group("rtc_base") {
  public_deps = []
  if (is_android) {
    public_deps += [ ":base_java" ]
  }
}

if (is_android) {
  android_library("base_java") {
    # TODO(kjellander): android_library hits an assert during GN generation
    # unless java_files is set and contains at least one file.
    # This will be cleaned up after the rename migration is completed.
    # This target currently exists only so downstream projects can migrate
    # to depend on both the old and the new target.
    # See https://bugs.webrtc.org/7634 for more details.
    java_files = [ "Dummy.java" ]
  }
}
